# privaCF

./: .gitignore  ANALYSIS-dkg-load.md  BRIDGE-SCOPE.md  CRYPTO.md  DESIGN-f1-verifiable-encryption.md  EXPLAINER.md  GRAPHS.md  README.md  SECURITY.md  SPEC.md  SPIKE-statement5.md  TODO.md
docs/: demo.tape
graphs/: Graph_00.drawio  Graph_01p.drawio  Graph_01s.drawio  Graph_02p.drawio  Graph_02s.drawio  Graph_03p.drawio  Graph_03s.drawio  Graph_04p.drawio  Graph_04s.drawio  Graph_05p.drawio  Graph_05s.drawio  Graph_06p.drawio
impl/: README.md  requirements.txt  spike_dkg_liveness.py  spike_stmt5_constraints.py
impl/easycrypt/: README.md  limb_ve_correctness.ec  limb_ve_indcpa.ec  (+1 more)
impl/mvp_node/: Cargo.toml  README.md  rust-toolchain.toml
impl/mvp_node/src/: admission.rs  arbitration.rs  audit.rs  beacon.rs  bls.rs  chain.rs  commit.rs  consensus.rs  detection.rs  discovery.rs  dkg.rs  epoch.rs  field.rs  hash.rs  history.rs  identity.rs  lib.rs  loopix.rs  membership.rs  message.rs  node.rs  obfuscate.rs  pedersen.rs  psi.rs  recommend.rs  reputation.rs  rewind.rs  smt.rs  sphinx.rs  transport.rs  vdf.rs  verdict.rs  verdict_policy.rs  verenc.rs  vrf.rs  watchdog.rs  zkstmt.rs  zkstmt5.rs
impl/mvp_node/tests/: arbitration.rs  arbitration_handoff.rs  arbitration_rehandoff.rs  arbitration_rehandoff_slashing.rs  arbitration_slashing.rs  autonomous_audit.rs  autonomous_oversight.rs  autonomous_rewind.rs  autonomous_verdict.rs  chain_sync.rs  convergence.rs  dark_node.rs  mixnet.rs  oversight.rs  psi_discovery.rs  recommendation.rs  recommendation_in_loop.rs  rewind.rs  stmt5_admission.rs  va_reshare.rs  verenc_proof.rs  zk_handoff.rs  zk_handoff_inloop.rs
(+28 files in other folders)
